--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode=development",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ariel Biernacki",
@@ -20,10 +21,12 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "webpack-dev-server": "^3.10.3"
   },
   "browserslist": [
     "defaults",
